crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@branch_two_cases.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
assertion_line: 83
expression: trace
input_file: crates/barnum_engine/tests/completion/branch_two_cases.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Branch {
                    count: Count(
                        2,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "typeA",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "typeB",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 0,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: Object {
            "data": Number(42),
            "kind": String("typeA"),
        },
    },
]

--- Completion: task_id=0, value="a_result" ---
Result: Some(String("a_result"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Branch {
                    count: Count(
                        2,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "typeA",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "typeB",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: []
