crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@chain_left_nested.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
assertion_line: 83
expression: trace
input_file: crates/barnum_engine/tests/completion/chain_left_nested.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                4,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                3,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 1,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 3,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    next_task_id: 1,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("start"),
    },
]

--- Completion: task_id=0, value="a_result" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                4,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 2,
        first_free: Some(
            FreePointer(2),
        ),
    },
    task_to_frame: {
        TaskId(
            1,
        ): Index {
            slot: 1,
            generation: Generation(2),
        },
    },
    pending_dispatches: [],
    next_task_id: 2,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: String("a_result"),
    },
]

--- Completion: task_id=1, value="b_result" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: None,
                        kind: Invoke {
                            handler: HandlerId(
                                2,
                            ),
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: Some(
                        FreePointer(2),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 1,
        first_free: Some(
            FreePointer(1),
        ),
    },
    task_to_frame: {
        TaskId(
            2,
        ): Index {
            slot: 0,
            generation: Generation(2),
        },
    },
    pending_dispatches: [],
    next_task_id: 3,
}
Pending: [
    DispatchEvent {
        task_id: TaskId(
            2,
        ),
        handler_id: HandlerId(
            2,
        ),
        value: String("b_result"),
    },
]

--- Completion: task_id=2, value="c_result" ---
Result: Some(String("c_result"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: Some(
                        FreePointer(1),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: Some(
                        FreePointer(2),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    next_task_id: 3,
}
Pending: []
