crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@chain_two_steps.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
expression: trace
input_file: crates/barnum_engine/tests/completion/chain_two_steps.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                2,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 2,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("start"),
    },
]

--- Completion: task_id=0, value="a_result" ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: None,
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 1,
        first_free: Some(
            FreePointer(1),
        ),
    },
    task_to_frame: {
        TaskId(
            1,
        ): Index {
            slot: 0,
            generation: Generation(2),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 2,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: String("a_result"),
    },
]

--- Completion: task_id=1, value="b_result" ---
Result: Some(String("b_result"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: Some(
                        FreePointer(1),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 2,
}
Pending: []
